# flask-sqlalchemy-tutorial

./: .env.example  .gitignore  Makefile  Pipfile  README.md  config.py  gunicorn.conf.py  logger.py  main.py  pyproject.toml  requirements.txt  start.sh  wsgi.py
.github/: dependabot.yml
application/: __init__.py  models.py  routes.py
application/static/css/: style.css
application/templates/: layout.html  layout.jinja2  users.html  users.jinja2
flask_sqlalchemy_tutorial/: __init__.py  models.py  routes.py
flask_sqlalchemy_tutorial/static/css/: style.css
flask_sqlalchemy_tutorial/templates/: analytics.jinja2  layout.jinja2  users.jinja2
