[tool.poetry]
name = "flask_sqlalchemy_tutorial"
version = "0.1.0"
description = "Connect your Flask app to a database using Flask-SQLAlchemy."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-sqlalchemy-database-models/"
repository = "https://github.com/hackersandslackers/flask-sqlalchemy-tutorial/"
documentation = "https://hackersandslackers.com/flask-sqlalchemy-database-models/"
keywords = [
    "Flask",
    "SQLAlchemy",
    "SQL",
    "Flask-SQLAlchemy",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_sqlalchemy = "*"
pymysql = "*"
python-dotenv = "*"
ddtrace = "^0.52.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^21.5b1"
isort = "^5.9.3"

[tool.poetry.scripts]
run = "wsgi:main"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-sqlalchemy-tutorial/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

