[tool.poetry]
name = "flask_sqlalchemy_tutorial"
version = "0.1.1"
description = "Connect your Flask app to a database using Flask-SQLAlchemy."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-sqlalchemy-database-models/"
repository = "https://github.com/hackersandslackers/flask-sqlalchemy-tutorial/"
documentation = "https://hackersandslackers.com/flask-sqlalchemy-database-models/"
keywords = ["Flask", "SQLAlchemy", "SQL", "Flask-SQLAlchemy", "Tutorial"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^3.1.0"
flask_sqlalchemy = "*"
pymysql = "*"
python-dotenv = "*"
pytest = "*"
black = "*"
isort = "*"
mypy = "*"
gunicorn = "^21.2.0"
poetry-plugin-export = "^1.8.0"
loguru = "^0.7.3"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-sqlalchemy-tutorial/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"
